# protonctl-rs

./: Cargo.toml  LICENSE  README.md  build.rs  justfile
protonctllib/: Cargo.toml
protonctllib/src/: cmd.rs  colored_out.rs  constants.rs  decompress.rs  github.rs  install.rs  install_type.rs  lib.rs  list.rs  os_helper.rs  remove.rs  utils.rs  version_info.rs
src/: cli.rs  cli_utils.rs  cmd.rs  constants.rs  github.rs  install.rs  list.rs  main.rs  os_helper.rs  remove.rs  ui.rs
src/ui/: term.rs
