[package]
name = "protonctl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["protonctllib"]

[workspace.dependencies]
anyhow = { version = "1.0.75" }
clap = { version = "4.4.7", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
 

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
protonctllib = { path = "./protonctllib" }
