[package]
name = "protonctl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["protonctllib"]

[workspace.dependencies]
anyhow = { version = "1.0.75" }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
dirs = { version = "5.0.1" } 
reqwest = { version = "0.11.22", features = ["json", "stream"] }
 

[dependencies]
anyhow.workspace = true
tokio.workspace = true
dirs.workspace = true
reqwest.workspace = true
clap = { version = "4.4.11" }
indicatif = { version = "0.17.7" }
console = { version = "0.15.7" }
async-trait = { version = "0.1.74" }
futures-util = { version = "0.3.29" }
protonctllib = { path = "./protonctllib" }

[profile.release]
opt-level = 3
codegen-units = 1
strip = true
panic = "abort"
debug = "none"
lto = true
