[package]
name = "protonctllib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs = { version = "5.0.1" } 
reqwest = { version = "0.11.22", features = ["json", "stream", "blocking"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = { version = "1.0.107" }
tar =  { version = "0.4.38" }
flate2 = { version = "1.0.28" }
sha2 = { version = "0.10.8" }
termcolor = { version = "1.3.0" }
xz2 = { version = "0.1.7" }
indicatif = { version = "0.17.7" }
tokio = { version = "1.34.0", features = ["full"] }
